# Embedded-Projects

Bin_File/: BOARD NO - 231.txt  test_case_BMS.xlsx
N706B-A07-STD-OE_CN1X_ITRI-009_SDK/: CMakeLists.txt  build_open_app_cmake.bat  readme.txt
N706B-A07-STD-OE_CN1X_ITRI-009_SDK/cmake/: toolchain-gcc.cmake
N706B-A07-STD-OE_CN1X_ITRI-009_SDK/doc/1-OS/: Neoway_OpenCPU_SDK_OS_API╦╡├≈_V1.3.docx
N706B-A07-STD-OE_CN1X_ITRI-009_SDK/doc/10-fota/: Neoway_OpenCPU_SDK_FOTA_API╦╡├≈_V1.1.2.docx
N706B-A07-STD-OE_CN1X_ITRI-009_SDK/doc/11-sntp/: Neoway_OpenCPU_SDK_SNTP_API╦╡├≈_V1.0.1.docx
N706B-A07-STD-OE_CN1X_ITRI-009_SDK/doc/12-http/: Neoway_OpenCPU_SDK_HTTP_API╦╡├≈_V1.1.1.docx
N706B-A07-STD-OE_CN1X_ITRI-009_SDK/doc/13-sslconfig/: Neoway_OpenCPU_SDK_SSLconfig_API╦╡├≈_V1.1.1.docx
N706B-A07-STD-OE_CN1X_ITRI-009_SDK/doc/15-GNSS/: Neoway_OpenCPU_SDK_GNSS_API╦╡├≈_V1.1.1.docx
N706B-A07-STD-OE_CN1X_ITRI-009_SDK/doc/16-lbs/: Neoway_OpenCPU_SDK_LBS_API╦╡├≈_V1.0.1.docx
N706B-A07-STD-OE_CN1X_ITRI-009_SDK/doc/17-wifi/: Neoway_OpenCPU_SDK_WiFi╔¿├Φ_API╦╡├≈_V1.1.1.docx
N706B-A07-STD-OE_CN1X_ITRI-009_SDK/doc/18-paho_mqtt/: Neoway_OpenCPU_SDK_Paho_MQTT_embedded_API╦╡├≈_V1.1.1.docx
N706B-A07-STD-OE_CN1X_ITRI-009_SDK/doc/19-STK/: Neoway_OpenCPU_SDK_STK_API╦╡├≈_V1.1.1.docx
N706B-A07-STD-OE_CN1X_ITRI-009_SDK/doc/2-SIM/: Neoway_OpenCPU_SDK_SIM_API╦╡├≈_V1.1.1.docx
N706B-A07-STD-OE_CN1X_ITRI-009_SDK/doc/3-Network/: Neoway_OpenCPU_SDK_NETWORK_API╦╡├≈_V1.0.1.docx
N706B-A07-STD-OE_CN1X_ITRI-009_SDK/doc/4-data/: Neoway_OpenCPU_SDK_Data_API╦╡├≈_V1.0.1.docx
N706B-A07-STD-OE_CN1X_ITRI-009_SDK/doc/5-SMS/: Neoway_OpenCPU_SDK_SMS_API╦╡├≈_V1.1.1.docx
N706B-A07-STD-OE_CN1X_ITRI-009_SDK/doc/6-IO/: Neoway_OpenCPU_SDK_IO_API╦╡├≈_V1.1.1.docx
N706B-A07-STD-OE_CN1X_ITRI-009_SDK/doc/7-PMC/: Neoway_OpenCPU_SDK_PM_API╦╡├≈_V1.1.1.docx
N706B-A07-STD-OE_CN1X_ITRI-009_SDK/doc/9-ftp/: Neoway_OpenCPU_SDK_FTP_API╦╡├≈_V1.0.1.docx
N706B-A07-STD-OE_CN1X_ITRI-009_SDK/doc_en/: readme.txt
N706B-A07-STD-OE_CN1X_ITRI-009_SDK/include/: nwy_adapt_platform.h  nwy_adc_api.h  nwy_baseline_version.h  nwy_common.h  nwy_cust.h  nwy_data_api.h  nwy_dm_api.h  nwy_file_api.h  nwy_fota_api.h  nwy_ftp_api.h  nwy_gpio_api.h  nwy_http_api.h  nwy_loc_api.h  nwy_network_api.h  nwy_osi_api.h  nwy_sim_api.h  nwy_sms_api.h  nwy_ssl_config.h  nwy_usb_api.h  nwy_usb_serial.h
N706B-A07-STD-OE_CN1X_ITRI-009_SDK/include/mbedtls/alios/: alios_mbedtls_config.h  alios_mbedtls_platform.c  alios_mbedtls_threading_alt.c  alios_mbedtls_threading_alt.h
N706B-A07-STD-OE_CN1X_ITRI-009_SDK/include/mbedtls/asros/: asros_mbedtls_config.h  asros_mbedtls_config_dongle.h  asros_mbedtls_platform.c  asros_mbedtls_platform.h  asros_mbedtls_platform_alt.h
N706B-A07-STD-OE_CN1X_ITRI-009_SDK/include/mbedtls/include/mbedtls/: build_info.h  net_sockets.h  threading.h  timing.h  x509_crt.h
N706B-A07-STD-OE_CN1X_ITRI-009_SDK/nwy_test_demo/: Makefile.mk
N706B-A07-STD-OE_CN1X_ITRI-009_SDK/nwy_test_demo/nwy_function_demo/inc/: nwy_demo_data.h  nwy_demo_main_control.h  nwy_demo_network_monitor.h  nwy_demo_tcp.h  nwy_demo_utility.h  nwy_demo_vir_at.h
N706B-A07-STD-OE_CN1X_ITRI-009_SDK/nwy_test_demo/nwy_function_demo/src/: nwy_demo_data.c  nwy_demo_entry.c  nwy_demo_main_control.c  nwy_demo_network_monitor.c  nwy_demo_tcp.c  nwy_demo_utility.c  nwy_demo_vir_at.c
N706B-A07-STD-OE_CN1X_ITRI-009_SDK/nwy_test_demo/nwy_test_cli/comm/: nwy_test_cli_adpt.c  nwy_test_cli_adpt.h  nwy_test_cli_menu.c  nwy_test_cli_utils.c  nwy_test_cli_utils.h
N706B-A07-STD-OE_CN1X_ITRI-009_SDK/nwy_test_demo/nwy_test_cli/modules/: nwy_test_cli_data.c  nwy_test_cli_fota.c  nwy_test_cli_func_def.h  nwy_test_cli_gpio.c  nwy_test_cli_http.c  nwy_test_cli_loc.c  nwy_test_cli_network.c  nwy_test_cli_os.c  nwy_test_cli_sim.c
N706B-A07-STD-OE_CN1X_ITRI-009_SDK/nwy_test_demo/odt_vts_application/Flash/: flash.c  flash.h
N706B-A07-STD-OE_CN1X_ITRI-009_SDK/nwy_test_demo/odt_vts_application/HTTP_Server/: http.c  http.h
N706B-A07-STD-OE_CN1X_ITRI-009_SDK/nwy_test_demo/odt_vts_application/NET_Application/: Network.c  Network.h
N706B-A07-STD-OE_CN1X_ITRI-009_SDK/nwy_test_demo/odt_vts_application/OTA/: ota.c  ota.h
N706B-A07-STD-OE_CN1X_ITRI-009_SDK/nwy_test_demo/odt_vts_application/Peripheral_Driver/: driver.c  driver.h  drv_callback.c
N706B-A07-STD-OE_CN1X_ITRI-009_SDK/nwy_test_demo/odt_vts_application/SMS/: sms.c  sms.h
N706B-A07-STD-OE_CN1X_ITRI-009_SDK/nwy_test_demo/odt_vts_application/VTS_Application/: VTS_App.c  VTS_App.h
N706B-A07-STD-OE_CN1X_ITRI-009_SDK/tools/: core_launch.bat  env_init.bat  target-upgrade.xml
N706B-A07-STD-OE_CN1X_ITRI-009_SDK/tools/aboot/: MakePkgBin.bat
N706B-A07-STD-OE_CN1X_ITRI-009_SDK/tools/aboot/configurations/releasepack-ASR1601-source/config/flash/: MEM_SIMULATION_FLASH.json  QSPI_NOR_2MB_B64KB_S4KB_P256.json  QSPI_NOR_8C16MB_B64KB_S4KB_P256.json  SPI_NOR_16MB_B64KB_S4KB_P256.json  SPI_NOR_2MB_B64KB_S4KB_P256.json
N706B-A07-STD-OE_CN1X_ITRI-009_SDK/tools/aboot/configurations/releasepack-ASR1601-source/config/partition/: ASR1601_SINGLE_FLASH_LAYOUT.json
N706B-A07-STD-OE_CN1X_ITRI-009_SDK/tools/aboot/configurations/releasepack-ASR1601-source/config/product/: ASR1601_EVB.json
N706B-A07-STD-OE_CN1X_ITRI-009_SDK/tools/aboot/configurations/releasepack-ASR1601-source/config/template/: ASR1601_TEMPLATE.json
N706B-A07-STD-OE_CN1X_ITRI-009_SDK/tools/aboot/configurations/releasepack-ASR1601-source/images/2019.01.15/: fuse.img
N706B-A07-STD-OE_CN1X_ITRI-009_SDK/tools/aboot/configurations/releasepack-ASR1603-source/config/flash/: EMMC_GENERIC_256M_FLASH.json  QSPI_NOR_32MB_B64KB_S4KB_P256.json
N706B-A07-STD-OE_CN1X_ITRI-009_SDK/tools/aboot/configurations/releasepack-ASR1603-source/config/partition/: ASR1603_ASR5311_FLASH_LAYOUT.json  ASR1603_SINGLE_FLASH_LAYOUT.json  ASR1603_SINGLE_SIM_FLASH_LAYOUT.json  ASR1603_SINGLE_SIM_SMS_FLASH_LAYOUT.json  ASR1603_SINGLE_SIM_VOLTE_FLASH_LAYOUT.json
N706B-A07-STD-OE_CN1X_ITRI-009_SDK/tools/aboot/configurations/releasepack-ASR1603-source/config/product/: ASR1603_EVB.json
(+73 files in other folders)
